# High-Fidelity-AI-Model-Simulation

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
examples/: CMakeLists.txt  codesign_examples.cpp
include/: ai_model.hpp  analyzer.hpp  hardware_simulator.hpp  optimizer.hpp  profiler.hpp
src/: ai_model.cpp  hardware_simulator.cpp  main.cpp
tests/: CMakeLists.txt  test_simulation.cpp
