cmake_minimum_required(VERSION 3.16)

# Simple tests (would normally use a testing framework like Google Test)
file(GLOB TEST_SOURCES "*.cpp")
foreach(test_source ${TEST_SOURCES})
    get_filename_component(test_name ${test_source} NAME_WE)
    add_executable(${test_name} ${test_source})
    target_link_libraries(${test_name} ${CMAKE_PROJECT_NAME})
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()